twitter request
