# docs/swagger.json
@@ -476,12 +476,9 @@
                 "summary": "트위터 request Token",
                 "parameters": [
                     {
-                        "description": "callback_url",
-                        "name": "body",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.TwitterGetAccessRequestBody"
-                        }
+                        "type": "string",
+                        "name": "callback_url",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -592,14 +589,6 @@
             "type": "object",
             "properties": {
                 "imgUri": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.TwitterGetAccessRequestBody": {
-            "type": "object",
-            "properties": {
-                "callback_url": {
                     "type": "string"
                 }
             }
